# ra2ce

./: .buildinfo  .gitignore  AUTHORS.rst  CONTRIBUTING.md  Dockerfile  Dockerfile.package  LICENSE  Makefile  RA2CE overview.drawio  README.md  README.rst  adaptation.ipynb  analyses.ini  apt.txt  argo_workflow.yml  changelog.html  changelog_wrapper.html  config.json  criticality_single_link_redundancy.ipynb  environment.yml  environment2.yml  example_damages_huizinga.ipynb  example_damages_huizinga_return_period.ipynb  example_equity_analysis.ipynb  example_get_network_with_hazardmap.ipynb  example_multi_ink_losses_estimated_annual_losses.ipynb  example_multi_link_losses.ipynb  example_optimal_route_origin_destination.ipynb  example_set_up_origin_destination_no_data_DIY.ipynb  example_single_link_losses_estimated_annual_losses.ipynb  example_single_link_redundancy.ipynb  filter_shp.py  genindex.html  index.html  input  network.ini  network_from_shapefile.ipynb  objects.inv  overview.html  py-modindex.html  (+14 more)
.config/: Dockerfile  docker_environment.yml  docker_requirements.txt  docs_environment.yml  environment.yml  tc_environment.yml
.devcontainer/: Dockerfile  devcontainer.json  externals.Dockerfile  postCreateCommand.sh
.github/: pull_request_template.md
_examples/: README.html  accessibility_all_pairs_origin_destinations.html  accessibility_all_pairs_origin_destinations.ipynb  accessibility_closest_origin_destinations.html  accessibility_closest_origin_destinations.ipynb  accessibility_equity_analysis.html  accessibility_equity_analysis.ipynb  adaptation.html  criticality_multi_link_redundancy.html  criticality_multi_link_redundancy.ipynb  criticality_single_link_redundancy.html  damages_EAD.html  damages_manual_curves.html  damages_manual_curves.ipynb  damages_reference_damage_curves.html  example_adaptation.html  example_damages_OSdamage.html  example_damages_OSdamage.ipynb  example_damages_OSdamage_return_period.html  example_damages_OSdamage_return_period.ipynb  example_damages_huizinga.html  example_damages_huizinga_return_period.html  example_damages_manual.html  example_damages_manual.ipynb  example_damages_manual_return_period.html  example_direct_damage.html  example_download_network_using_a_polygon.html  example_equity_analysis.html  example_get_network_with_hazardmap.html  example_hazard_overlay.html  example_isolated_locations.html  example_isolated_locations.ipynb  example_multi_ink_losses_estimated_annual_losses.html  example_multi_link_losses.html  example_multi_link_losses_estimated_annual_losses.html  example_network_simplification_excluding_attributes.html  example_optimal_route_origin_destination.html  example_optimal_route_origin_destination.ipynb  example_origin_destination_analysis.html  example_origin_destination_analysis.ipynb  (+18 more)
_modules/: index.html
_sources/: changelog.md.txt  changelog_wrapper.rst.txt  index.rst.txt  overview.rst.txt
_static/: nbsphinx-code-cells.css  python-code-block-style.css
about/: about.html
analysis_module/: analysis_module.html
api/: analysis.html  index.html  network.html  ra2ce.analysis.adaptation.html  ra2ce.analysis.analysis_config_data.enums.html  ra2ce.analysis.analysis_config_data.html  ra2ce.analysis.analysis_result.html  ra2ce.analysis.damages.damage_calculation.html  ra2ce.analysis.damages.damage_functions.html  ra2ce.analysis.damages.html  ra2ce.analysis.damages.shape_to_integrate_object.html  ra2ce.analysis.losses.html  ra2ce.analysis.losses.resilience_curves.html  ra2ce.analysis.losses.risk_calculation.html  ra2ce.analysis.losses.time_values.html  ra2ce.analysis.losses.traffic_analysis.html  ra2ce.analysis.losses.traffic_intensities.html  ra2ce.analysis.losses.weighing_analysis.html  ra2ce.common.configuration.html  ra2ce.common.html  ra2ce.common.io.html  ra2ce.common.io.readers.html  ra2ce.common.io.writers.html  ra2ce.common.validation.html  ra2ce.configuration.html  ra2ce.handler.html  ra2ce.network.avg_speed.html  ra2ce.network.exporters.html  ra2ce.network.graph_files.html  ra2ce.network.hazard.hazard_intersect.html  ra2ce.network.hazard.html  ra2ce.network.network_config_data.enums.html  ra2ce.network.network_config_data.html  ra2ce.network.network_simplification.html  ra2ce.network.network_wrappers.html  ra2ce.network.network_wrappers.osm_network_wrapper.html  ra2ce.runners.html
contributing/: design_principles.html  implementation_decisions.html  index.html
docker_and_cloud/: argo_deployment.html  cloud_user_guide.html  docker_user_guide.html  index.html  kubernetes_deployment.html  slurm_user_guide.html
docs/: .gitignore  Makefile  RA2CE documentation.docx  RA2CE_code_overview.drawio  RA2CE_workflow_overview.drawio  changelog.md  changelog.rst  conf.py  getting_started.rst  index.rst  installation.rst  make.bat  overview.rst  ra2ce-analyses-direct-workflowsept2022.drawio  refactoring_ra2ce.drawio  usage.rst
docs2/: conf.py  overview.rst
examples/: README.md  access_POP.html  accessibility_all_pairs_origin_destinations.ipynb  accessibility_closest_origin_destinations.ipynb  accessibility_equity_analysis.ipynb  adaptation.ipynb  assignment_functions.py  basic_examples.html  beira_losses.ipynb  criticality_multi_link_redundancy.ipynb  criticality_single_link_redundancy.ipynb  damages_EAD.ipynb  damages_manual_curves.ipynb  damages_reference_damage_curves.ipynb  environment.yml  example1_network_generation.py  example2_single_redundancy_check.py  example2_single_redundancy_test.py  example_adaptation.ipynb  example_damages_OSdamage.ipynb  example_damages_OSdamage_return_period.ipynb  example_damages_huizinga.ipynb  example_damages_huizinga_return_period.ipynb  example_damages_manual.ipynb  example_damages_manual_return_period.ipynb  example_direct_damage.ipynb  example_direct_damage_OSdamage.ipynb  example_direct_damage_huizinga.ipynb  example_direct_damage_manual.ipynb  example_docu.ipynb  example_download_network_using_a_polygon.ipynb  example_east_africa.ipynb  example_emergency_responders.ipynb  example_equity_analysis.ipynb  example_get_network_with_hazardmap.ipynb  (+39 more)
faq/: faq.html
(+2822 files in other folders)
