[project]
name = "ra2ce"
version = "1.1.0"
description = "Risk Assessment and Adaptation for Critical infrastructurE (RA2CE)."
authors = [
  {name = "Margreet van Marle", email = "Margreet.vanMarle@deltares.nl"},
  {name = "Kees van Ginkel", email = "kees.vanginkel@deltares.nl"}
]
maintainers = [
  {name = "Carles S. Soriano Perez", email = "carles.sorianoperez@deltares.nl"},
  {name = "Ardt Klapwijk", email = "ardt.klapwijk@deltares.nl"},
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["civil-engineering", "dikes", "resilience-assessment", "infrastructure", "networks", "deltares"]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13'
]
requires-python = ">=3.11,<3.14"


[project.urls]
homepage = "https://github.com/Deltares/ra2ce"
documentation = "https://deltares.github.io/ra2ce/"
repository = "https://github.com/Deltares/ra2ce"
issues = "https://github.com/Deltares/ra2ce/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64","osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
ra2ce = { path = ".", editable = true }
build = "*"

[tool.pixi.tasks]
run_ra2ce = "ra2ce.run:main"
update-example-references = "examples.data.update_reference:run"

[tool.pixi.dependencies]
python = ">=3.11, <3.14"
affine = ">=2.3.1"
click = ">=8.1.3"
numpy = ">=1.23.3"
networkx = ">=3.2.0"
pandas = ">=2.0.0"
pyarrow = ">=10.0.0"
rasterio = ">=1.3.2"
rasterstats = ">=0.17.0"
Rtree = ">=1.0.0"
seaborn = ">=0.12.0"
openpyxl = ">=3.0.10"
xlrd = ">=2.0.1"
xarray = ">=2022.6.0"
scipy = ">=1.9.1"
momepy = ">=0.10.0"
geopandas = ">=1.1.1"
osmnx = ">=2.0.0"
tqdm = ">=4.66.1"
geopy = ">=2.4.0"
joblib = ">=1.3.2"
pyinstaller = ">=6.2.0"
snkit = ">=1.9.0"
shapely = ">=2.1.2,<3"
pyogrio = ">=0.12.1,<0.13"


[tool.pixi.feature.dev.dependencies]
isort = ">=5.10.1"
commitizen = ">=2.32.5"
flake8 = ">=5.0.4"
mypy = ">=0.971"
black = ">=22.8.0"
urllib3 = "=1.26.15"
pyinstaller = ">=6.2.0"
pyinstaller-versionfile = ">=2.1.1"

[tool.pixi.feature.test.dependencies]
pytest-cov = ">=3.0.0"
pytest = ">=7.1.3"
teamcity-messages = ">=1.33,<2"
testbook = ">=0.4.2"
pytest-xdist = ">=3.3.1"
pytest-profiling = ">=1.7.0"
pytest-notebook = ">=0.9.0"

[tool.pixi.feature.docs.dependencies]
jupytext = ">=1.14.5"
nbsphinx = ">=0.9.1"
myst-parser = ">=4.0.0"
sphinx = "=8.2.3"
sphinx-book-theme = ">=1.0.1"
sphinx-copybutton = ">=0.5.2"
sphinx-rtd-theme = ">=3.0.0"
sphinx-autosummary-accessors = ">=2023.4.0"
sphinx-design = ">=0.6.1"
ipykernel = ">=6.25.1"
pandoc = ">=2.3"
pillow = ">=10.1.0"
sphinx-autodoc-typehints = ">=3.2.0"

[tool.pixi.feature.jupyter.dependencies]
# These dependencies are required for binder (`examples\environment.yml`).
folium = ">=0.15.0"
matplotlib = ">=3.8.1"
mapclassify = ">=2.6.1"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"


[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
dev = { features = ["dev", "test"], solve-group = "default" }
docs = { features = ["docs"], solve-group="default"}
jupyter = { features = ["jupyter"], solve-group="default"}
py311 = ["py311", "default"]
py312 = ["py312", "default"]
py313 = ["py313", "default"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.commitizen]
name = "cz_conventional_commits"
changelog_file = "docs/changelog.md"
update_changelog_on_bump = true
version = "1.1.0"
tag_format = "v$major.$minor.$patch"
version_files= [
    "ra2ce/__init__.py",
    "pyproject.toml:version",]

[tool.pytest]
markers = [
    "slow_test: marks tests as a long computation time test (deselect with '-m \"not slow\"')",
    "documentation: marks tests which relate to documentation such as jupyter notebooks (deselct with '-m \"not documentation\"')",
    "external_test_data: marks tests as a test whose required data comes from external sources (deselct with '-m \"not external_test_data\"')",
]

